SCons clock_gettime build error
$ scons toolchain=crossmingw platform=windows machine=x86_64
[...]
Linking build/windows-x86_64-debug/gallium/targets/libgl-gdi/opengl32.dll ...
/usr/bin/x86_64-w64-mingw32-ld: build/windows-x86_64-debug/util/libmesautil.a(u_queue.o): in function `_util_queue_fence_wait_timeout':
src/util/u_queue.c:189: undefined reference to `clock_gettime'
68a785e63fe848c7bcd48bce2095670926f97eea is the first bad commit
commit 68a785e63fe848c7bcd48bce2095670926f97eea
Author: Jeremy Huddleston Sequoia <jeremyhu@apple.com>
Date: Tue Jan 12 16:44:34 2021 -0800
Fall back on clock_gettime when timespec_get() is unavailable
Fixes: e3a8013de8ca "util/u_queue: add util_queue_fence_wait_timeout"
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/1020
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/4088
Signed-off-by: Jeremy Huddleston Sequoia <jeremyhu@apple.com>
Signed-off-by: Yurii Kolesnykov <root@yurikoles.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8482>
src/util/u_queue.c | 4 ++++
1 file changed, 4 insertions(+)
bisect run success
cc: @jeremyhu @yurikoles